- Makefile, desk/icons.c: Removed the icons dir from system include path. (VRI)

2011-08-05
- desk/icons/deskhi.icn, desk/icons/desklo.icn: Set as binary in CVS. (VRI)
- util/bootasm.S, util/bootsect.S: Added ColdFire support. (VRI)
- util/boot.c: Fixed warnings with GCC 4.6.1. (VRI)

2011-08-12
- .cvsignore, Makefile: Added the firebee target. (VRI)
- Makefile: Compile the aranym target with -m68040. (VRI)
- Makefile: Added the defines MACHINE_ARANYM and MACHINE_FIREBEE to identify the
  machine-specific ROMs from inside the sources. (VRI)
- bios/bios.c, include/config.h: Added new define ALWAYS_SHOW_INITINFO to show
  the welcome screen on every boot. Enabled by default on the FireBee. (VRI)
- bios/bios.c, bios/initinfo.c, include/config.h: Added new define
  INITINFO_DURATION to set the welcome screen duration. (VRI)
- bios/machine.c: Fixed machine_name() for the FireBee. (VRI)
- desk/desk_rsc.c: Reworked some dialogs for French texts. (THH)
- po/fr.po: Changed "Pas de clic" to "Auto" to fit the button. (VRI)
- Makefile, include/config.h: Moved machine-specific defines to config.h. (VRI)
- bios/memory.S: Added another sanity check for emulators that do not emulate
  the mirroring of memory banks. (THH)

2011-08-13
- Makefile, bios/bios.c, bios/biosmem.c, bios/startup.S, include/config.h:
  Replaced the is_ramtos variable by the EMUTOS_RAM define to determine if
  EmuTOS is running in RAM. (VRI)

2011-08-14
- bios/comprimg.S, bios/memory.S, bios/startup.S: Fixed the ecpr256k.img target
  compilation (but still not functional). (VRI)

2011-08-15
- Makefile: Allow to build the shared sources with different preprocessor
  defines. (VRI)
- bios/memory.S: Fixed the compressed image targets (ecpr256k.img and
  ecpr192k.img). (VRI)
- bios/tosvars.S: Removed useless globals. (VRI)
- desk/deskmain.c: Removed dead DBG_DESKMAIN. (VRI)
- Makefile, comprimg.S: Use tosvars.S instead of redefining the variables. (VRI)