@@ -2453,4 +2453,6 @@ Start... early ages
   ecpr192k.img). (VRI)
 - bios/tosvars.S: Removed useless globals. (VRI)
 - desk/deskmain.c: Removed dead DBG_DESKMAIN. (VRI)
-- Makefile, comprimg.S: Use tosvars.S instead of redefining the variables. (VRI)
+- Makefile, bios/comprimg.S: Use tosvars.S instead of redefining the
+  variables. (VRI)
+- bios/comprimg.S, util/uncompr.S: Added ColdFire support.
